--- a/src/view/DashboardSecretario.form
+++ b/src/view/DashboardSecretario.form
@@ -48,11 +48,7 @@
                   <EmptySpace min="0" pref="1287" max="32767" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                      <Component id="panGuia" pref="1114" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="panGuia" alignment="1" pref="1288" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -226,9 +222,9 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <EmptySpace min="0" pref="1276" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="1348" max="32767" attributes="0"/>
                       <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-                          <Component id="panHomeGradient" alignment="1" pref="1276" max="32767" attributes="0"/>
+                          <Component id="panHomeGradient" alignment="1" pref="1348" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -267,26 +263,26 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="botAlunos" alignment="0" pref="209" max="32767" attributes="0"/>
                                           <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
                                           <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="botCaixa" max="32767" attributes="0"/>
+                                          <Component id="botCaixa" pref="274" max="32767" attributes="0"/>
+                                          <Component id="botTreinadores" max="32767" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jLabel5" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="labelTreinadores" alignment="0" pref="209" max="32767" attributes="0"/>
-                                          <Component id="botTreinadores" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="labelTreinadores" alignment="0" pref="274" max="32767" attributes="0"/>
                                           <Component id="botDespesa" max="32767" attributes="0"/>
+                                          <Component id="botAlunos" max="32767" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="33" pref="33" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jLabel6" alignment="0" max="32767" attributes="0"/>
                                           <Component id="labelSecretarios" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="botPagamentos" pref="211" max="32767" attributes="0"/>
+                                          <Component id="botPagamentos" pref="276" max="32767" attributes="0"/>
                                           <Component id="botSecretarios" max="32767" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="-2" pref="551" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="428" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
                                       <Component id="jLabel8" min="-2" pref="239" max="-2" attributes="0"/>
@@ -339,20 +335,9 @@
                                       <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="1" attributes="0">
                                           <Group type="102" alignment="1" attributes="0">
-                                              <Component id="botAlunos" linkSize="3" min="-2" pref="100" max="-2" attributes="0"/>
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <Component id="botCaixa" linkSize="3" min="-2" pref="100" max="-2" attributes="0"/>
-                                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" attributes="0">
                                               <Group type="103" groupAlignment="1" attributes="0">
                                                   <Group type="102" alignment="1" attributes="0">
-                                                      <Component id="botTreinadores" linkSize="3" min="-2" pref="100" max="-2" attributes="0"/>
+                                                      <Component id="botAlunos" linkSize="3" min="-2" pref="100" max="-2" attributes="0"/>
                                                       <EmptySpace max="-2" attributes="0"/>
                                                       <Component id="labelTreinadores" min="-2" max="-2" attributes="0"/>
                                                   </Group>
@@ -373,6 +358,21 @@
                                                       <Component id="botDespesa" linkSize="3" min="-2" pref="100" max="-2" attributes="0"/>
                                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                                       <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                              </Group>
+                                          </Group>
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <Component id="botTreinadores" linkSize="3" min="-2" pref="100" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Group type="102" alignment="1" attributes="0">
+                                                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                                                      <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <Group type="102" alignment="1" attributes="0">
+                                                      <Component id="botCaixa" linkSize="3" min="-2" pref="100" max="-2" attributes="0"/>
+                                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                      <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                                                   </Group>
                                               </Group>
                                           </Group>
@@ -612,7 +612,7 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="horizontalAlignment" type="int" value="0"/>
-                        <Property name="text" type="java.lang.String" value="ALUNOS"/>
+                        <Property name="text" type="java.lang.String" value="TREINADORES"/>
                       </Properties>
                     </Component>
                     <Component class="com.hq.swingmaterialdesign.materialdesign.MGradientButton" name="botTreinadores">
@@ -659,7 +659,7 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="horizontalAlignment" type="int" value="0"/>
-                        <Property name="text" type="java.lang.String" value="TREINADORES"/>
+                        <Property name="text" type="java.lang.String" value="ALUNOS"/>
                       </Properties>
                     </Component>
                     <Component class="com.hq.swingmaterialdesign.materialdesign.MGradientButton" name="botSecretarios">
